--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -8541,29 +8541,25 @@ FONT 8, "MS Sans Serif"
   CONTROL "Calcular por", -1, "Button", BS_GROUPBOX, 2, 91, 143, 85
 }
 
-ADSAUDITOR DIALOG DISCARDABLE 15, 83, 646, 300
+AdvantageAuditor DIALOG DISCARDABLE 15, 83, 646, 460
 STYLE WS_POPUP|DS_MODALFRAME|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
-CAPTION "DIALOG_2"
+CAPTION "Auditoria"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "OK", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 592, 282, 50, 14
-  CONTROL "", 100, "SysTreeView32", 0x00000000, 49, 40, 122, 230
-  CONTROL "Tablas", -1, "Button", BS_GROUPBOX, 44, 29, 131, 246
-  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
-  CONTROL "Datos generales del artículo", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 446, 8
-  CONTROL "Criterios", -1, "Button", BS_GROUPBOX, 178, 29, 464, 52
-  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 232, 53, 75, 11
-  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 232, 66, 75, 11
-  CONTROL "Desde", -1, "Static", WS_GROUP, 184, 56, 23, 8
-  CONTROL "Hasta", -1, "Static", WS_GROUP, 183, 69, 21, 8
-  CONTROL "Proced", 150, "Button", WS_TABSTOP, 588, 39, 50, 36
-  CONTROL "Resultados", -1, "Button", BS_GROUPBOX, 178, 84, 464, 196
-  CONTROL "", 200, "IXBrowse", 0x00200000, 184, 96, 454, 180
-  CONTROL "Añadir", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 387, 40, 48, 10
-  CONTROL "Modificar", 141, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 387, 53, 48, 10
-  CONTROL "Eliminar", 142, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 387, 66, 48, 10
-  CONTROL "Operaciones:", -1, "Static", WS_GROUP, 335, 42, 47, 8
-  CONTROL "", 110, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 184, 40, 123, 84
+  CONTROL "OK", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 590, 42, 50, 36
+  CONTROL "", -1, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "", 120, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 247, 41, 75, 11
+  CONTROL "", 130, "Edit", WS_VSCROLL|WS_BORDER|WS_TABSTOP, 247, 54, 75, 11
+  CONTROL "Desde", -1, "Static", WS_GROUP, 205, 44, 23, 8
+  CONTROL "Hasta", -1, "Static", WS_GROUP, 205, 57, 21, 8
+  CONTROL "Proced", 150, "Button", WS_TABSTOP, 530, 42, 50, 36
+  CONTROL "Añadir", 140, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 387, 42, 48, 10
+  CONTROL "Modificar", 141, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 387, 55, 48, 10
+  CONTROL "Eliminar", 142, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 387, 69, 48, 10
+  CONTROL "Operaciones:", -1, "Static", WS_GROUP, 335, 44, 47, 8
+  CONTROL "", 100, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 74, 41, 123, 84
+  CONTROL "", 200, "TXBrowse", WS_TABSTOP|0x00300000, 74, 81, 566, 184
+  CONTROL "", 210, "TXBrowse", WS_TABSTOP|0x00300000, 74, 268, 566, 184
 }
 
 INF_CLI01 DIALOG DISCARDABLE -2, -14, 406, 244
@@ -18788,22 +18784,24 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH
 
-ADSADMIN DIALOG DISCARDABLE 37, 77, 621, 310
+ADSADMIN DIALOG DISCARDABLE 37, 77, 621, 340
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION
 CAPTION "Diccionario de datos para ADS"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 400, "Static", WS_GROUP, 48, 262, 566, 8
+  CONTROL "", 400, "Static", WS_GROUP, 48, 314, 566, 8
   CONTROL "Empresas", -1, "Button", BS_GROUPBOX, 44, 30, 574, 219
   CONTROL "", -1, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Creación de diccionario de datos para ADS", -1, "Static", WS_GROUP, 44, 3, 141, 8
-  CONTROL "Progreso", -1, "Button", BS_GROUPBOX, 44, 251, 574, 36
+  CONTROL "Progreso", -1, "Button", BS_GROUPBOX, 44, 303, 574, 36
   CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00300000, 48, 41, 566, 203
-  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 512, 291, 50, 14
-  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 567, 291, 50, 14
-  CONTROL "", 500, "msctls_progress32", 0x00000000, 48, 272, 566, 5
-  CONTROL "", 510, "msctls_progress32", 0x00000000, 48, 278, 566, 5
-  CONTROL "Actualizar bases de datos", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 44, 295, 94, 10
+  CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 512, 289, 50, 14
+  CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 567, 289, 50, 14
+  CONTROL "", 500, "msctls_progress32", 0x00000000, 48, 324, 566, 5
+  CONTROL "", 510, "msctls_progress32", 0x00000000, 48, 330, 566, 5
+  CONTROL "Actualizar bases de datos", 600, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 260, 94, 10
+  CONTROL "Crear triggers para tablas auxiliares", 610, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 273, 122, 10
+  CONTROL "Progreso", 4001, "Button", BS_GROUPBOX, 43, 250, 574, 36
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
