--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -8541,7 +8541,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "Calcular por", -1, "Button", BS_GROUPBOX, 2, 91, 143, 85
 }
 
-AdvantageAuditor DIALOG DISCARDABLE 15, 83, 646, 460
+ADVANTAGEAUDITOR DIALOG DISCARDABLE 15, 83, 646, 460
 STYLE WS_POPUP|DS_MODALFRAME|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Auditoria"
 FONT 8, "MS Sans Serif"
@@ -14664,22 +14664,22 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 161, "Edit", WS_BORDER, 222, 42, 111, 11
   CONTROL "", 162, "TBtnBmp", 0x00000000, 334, 42, 12, 11
   CONTROL "", 164, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 42, 39, 11
-  CONTROL "Vales en impresora normal", 173, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 57, 102, 10
-  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 190, 56, 30, 11
-  CONTROL "", 171, "Edit", WS_BORDER, 222, 56, 111, 11
-  CONTROL "", 172, "TBtnBmp", 0x00000000, 334, 56, 12, 11
-  CONTROL "", 174, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 56, 39, 11
-  CONTROL "Devoluciones en impresora normal", 183, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 70, 128, 10
-  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 190, 69, 30, 11
-  CONTROL "", 181, "Edit", WS_BORDER, 222, 69, 111, 11
-  CONTROL "", 182, "TBtnBmp", 0x00000000, 334, 69, 12, 11
-  CONTROL "", 184, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 69, 39, 11
-  CONTROL "Apartados en impresora normal", 273, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 83, 113, 10
-  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 190, 82, 30, 11
-  CONTROL "", 271, "Edit", WS_BORDER, 222, 82, 111, 11
-  CONTROL "", 272, "TBtnBmp", 0x00000000, 334, 82, 12, 11
-  CONTROL "", 274, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 82, 39, 11
-  CONTROL "Entregas en impresora normal", 193, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 95, 113, 10
+  CONTROL "Vales en impresora normal", 173, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 56, 102, 10
+  CONTROL "", 170, "Edit", WS_BORDER|WS_TABSTOP, 190, 55, 30, 11
+  CONTROL "", 171, "Edit", WS_BORDER, 222, 55, 111, 11
+  CONTROL "", 172, "TBtnBmp", 0x00000000, 334, 55, 12, 11
+  CONTROL "", 174, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 55, 39, 11
+  CONTROL "Devoluciones en impresora normal", 183, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 69, 128, 10
+  CONTROL "", 180, "Edit", WS_BORDER|WS_TABSTOP, 190, 68, 30, 11
+  CONTROL "", 181, "Edit", WS_BORDER, 222, 68, 111, 11
+  CONTROL "", 182, "TBtnBmp", 0x00000000, 334, 68, 12, 11
+  CONTROL "", 184, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 68, 39, 11
+  CONTROL "Apartados en impresora normal", 273, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 82, 113, 10
+  CONTROL "", 270, "Edit", WS_BORDER|WS_TABSTOP, 190, 81, 30, 11
+  CONTROL "", 271, "Edit", WS_BORDER, 222, 81, 111, 11
+  CONTROL "", 272, "TBtnBmp", 0x00000000, 334, 81, 12, 11
+  CONTROL "", 274, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 81, 39, 11
+  CONTROL "Notas en impresora normal", 193, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 95, 113, 10
   CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 190, 94, 30, 11
   CONTROL "", 191, "Edit", WS_BORDER, 222, 94, 111, 11
   CONTROL "", 192, "TBtnBmp", 0x00000000, 334, 94, 12, 11
@@ -14714,40 +14714,40 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 261, "Edit", WS_BORDER, 222, 172, 111, 11
   CONTROL "", 262, "TBtnBmp", 0x00000000, 334, 172, 12, 11
   CONTROL "", 264, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 172, 39, 11
-  CONTROL "Cheques regalo en impresora normal", 283, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 185, 127, 10
-  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 190, 184, 30, 11
-  CONTROL "", 281, "Edit", WS_BORDER, 222, 184, 111, 11
-  CONTROL "", 282, "TBtnBmp", 0x00000000, 334, 184, 12, 11
-  CONTROL "", 284, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 184, 39, 11
-  CONTROL "Entregas a cuenta en impresora normal", 353, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 198, 137, 10
-  CONTROL "", 350, "Edit", WS_BORDER|WS_TABSTOP, 190, 197, 30, 11
-  CONTROL "", 351, "Edit", WS_BORDER, 222, 197, 111, 11
-  CONTROL "", 352, "TBtnBmp", 0x00000000, 334, 197, 12, 11
-  CONTROL "", 354, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 196, 39, 11
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 190, 210, 30, 11
-  CONTROL "", 241, "Edit", WS_BORDER, 222, 210, 111, 11
-  CONTROL "", 242, "TBtnBmp", 0x00000000, 334, 210, 12, 11
-  CONTROL "", 244, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 210, 39, 11
+  CONTROL "Cheques regalo en impresora normal", 283, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 186, 127, 10
+  CONTROL "", 280, "Edit", WS_BORDER|WS_TABSTOP, 190, 185, 30, 11
+  CONTROL "", 281, "Edit", WS_BORDER, 222, 185, 111, 11
+  CONTROL "", 282, "TBtnBmp", 0x00000000, 334, 185, 12, 11
+  CONTROL "", 284, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 185, 39, 11
+  CONTROL "Entregas a cuenta en impresora normal", 353, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 199, 137, 10
+  CONTROL "", 350, "Edit", WS_BORDER|WS_TABSTOP, 190, 198, 30, 11
+  CONTROL "", 351, "Edit", WS_BORDER, 222, 198, 111, 11
+  CONTROL "", 352, "TBtnBmp", 0x00000000, 334, 198, 12, 11
+  CONTROL "", 354, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 198, 39, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 190, 211, 30, 11
+  CONTROL "", 241, "Edit", WS_BORDER, 222, 211, 111, 11
+  CONTROL "", 242, "TBtnBmp", 0x00000000, 334, 211, 12, 11
+  CONTROL "", 244, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 211, 39, 11
   CONTROL "Formatos de impresión", -1, "Button", BS_GROUPBOX, 44, 29, 308, 211
   CONTROL "Copias", -1, "Button", BS_GROUPBOX, 354, 29, 46, 211
-  CONTROL "Formato para comandas", -1, "Static", WS_GROUP, 48, 213, 84, 8
-  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 190, 222, 30, 11
-  CONTROL "", 291, "Edit", WS_BORDER, 222, 222, 111, 11
-  CONTROL "", 292, "TBtnBmp", 0x00000000, 334, 222, 12, 11
-  CONTROL "Formato para anulaciones", -1, "Static", WS_GROUP, 48, 225, 84, 8
-  CONTROL "", 294, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 222, 39, 11
+  CONTROL "Formato para comandas", -1, "Static", WS_GROUP, 48, 214, 84, 8
+  CONTROL "", 290, "Edit", WS_BORDER|WS_TABSTOP, 190, 224, 30, 11
+  CONTROL "", 291, "Edit", WS_BORDER, 222, 224, 111, 11
+  CONTROL "", 292, "TBtnBmp", 0x00000000, 334, 224, 12, 11
+  CONTROL "Formato para anulaciones", -1, "Static", WS_GROUP, 48, 227, 84, 8
+  CONTROL "", 294, "Edit", ES_RIGHT|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 358, 224, 39, 11
   CONTROL "", 300, "Edit", WS_BORDER|WS_TABSTOP, 190, 251, 30, 11
   CONTROL "", 301, "Edit", WS_BORDER, 221, 251, 176, 11
   CONTROL "", 310, "Edit", WS_BORDER|WS_TABSTOP, 190, 264, 30, 11
   CONTROL "", 311, "Edit", WS_BORDER, 221, 264, 176, 11
   CONTROL "", 320, "Edit", WS_BORDER|WS_TABSTOP, 190, 277, 30, 11
   CONTROL "", 321, "Edit", WS_BORDER, 221, 277, 176, 11
-  CONTROL "", 330, "Edit", WS_BORDER, 190, 291, 193, 11
-  CONTROL "", 331, "TBtnBmp", 0x00000000, 385, 291, 12, 11
+  CONTROL "", 330, "Edit", WS_BORDER, 190, 290, 193, 11
+  CONTROL "", 331, "TBtnBmp", 0x00000000, 385, 290, 12, 11
   CONTROL "Otros dispositivos", -1, "Button", BS_GROUPBOX, 44, 242, 356, 63
   CONTROL "Cajón portamonedas", -1, "Static", WS_GROUP, 48, 267, 66, 8
   CONTROL "Balanza", -1, "Static", WS_GROUP, 48, 280, 66, 8
-  CONTROL "Código para corte de papel", -1, "Static", WS_GROUP, 48, 294, 91, 8
+  CONTROL "Código para corte de papel", -1, "Static", WS_GROUP, 48, 293, 91, 8
   CONTROL "Visor", -1, "Static", WS_GROUP, 48, 254, 21, 8
   CONTROL "", 800, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
   CONTROL "Selección de formatos y otros dispositivos", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 355, 8
