--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -16514,23 +16514,11 @@ RECIBOS_5 DIALOG DISCARDABLE 82, 27, 333, 272
 STYLE WS_CHILD|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "Entidad bancaria de la empresa", -1, "Button", BS_GROUPBOX, 44, 29, 285, 45
-  CONTROL "Entidad bancaria del proveedor", -1, "Button", BS_GROUPBOX, 44, 77, 285, 46
+  CONTROL "Recibos agrupados", -1, "Button", BS_GROUPBOX, 44, 29, 285, 213
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
-  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_HSCROLL|WS_BORDER|WS_TABSTOP, 89, 42, 232, 11
-  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 89, 56, 34, 11
-  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 125, 56, 34, 11
-  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 161, 56, 20, 11
-  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 183, 56, 80, 11
-  CONTROL "Banco", -1, "Static", WS_GROUP, 50, 43, 23, 8
-  CONTROL "Cuenta", -1, "Static", WS_GROUP, 50, 56, 27, 8
-  CONTROL "", 200, "Edit", ES_AUTOHSCROLL|WS_HSCROLL|WS_BORDER|WS_TABSTOP, 89, 90, 232, 11
-  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 89, 104, 34, 11
-  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 125, 104, 34, 11
-  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 161, 104, 20, 11
-  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 183, 104, 80, 11
-  CONTROL "Banco", -1, "Static", WS_GROUP, 50, 91, 23, 8
-  CONTROL "Cuenta", -1, "Static", WS_GROUP, 50, 104, 27, 8
+  CONTROL "Aña&dir [F2]", 100, "Button", WS_TABSTOP, 48, 40, 50, 14
+  CONTROL "&Eliminar [F4]", 110, "Button", WS_TABSTOP, 103, 40, 50, 14
+  CONTROL "", 200, "TXBrowse", WS_TABSTOP|0x00300000, 48, 56, 278, 182
 }
 
 RECIBOS_6 DIALOG DISCARDABLE 82, 27, 333, 272
@@ -17464,7 +17452,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 261, "Edit", WS_BORDER|WS_TABSTOP, 509, 102, 154, 11
   CONTROL "", 190, "Edit", WS_BORDER|WS_TABSTOP, 444, 115, 46, 11
   CONTROL "", 191, "TBitMap", 0x00800000, 491, 115, 16, 11
-  CONTROL "IVA Incluido", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 78, 68, 54, 12
+  CONTROL "Imp. incluido", 200, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 78, 68, 54, 12
   CONTROL "Aña&dir [F2]", 500, "Button", WS_TABSTOP, 44, 130, 50, 14
   CONTROL "&Modificar [F3]", 501, "Button", WS_TABSTOP, 99, 130, 50, 14
   CONTROL "&Eliminar [F4]", 502, "Button", WS_TABSTOP, 154, 130, 50, 14
