--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -1281,19 +1281,23 @@ FONT 12, "Segoe UI"
   CONTROL "50 %", 240, "Button", WS_TABSTOP, 130, 68, 30, 22
 }
 
-INV_TCT DIALOG DISCARDABLE 240, 79, 218, 180
+INV_TCT DIALOG DISCARDABLE 240, 79, 294, 213
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Invitaciones"
 FONT 12, "Segoe UI"
 {
   CONTROL "", 100, "Button", WS_TABSTOP, 37, 11, 30, 22
   CONTROL "", 110, "Button", WS_TABSTOP, 6, 11, 30, 22
-  CONTROL "", 120, "SysListView32", LVS_SINGLESEL|LVS_SHOWSELALWAYS|WS_BORDER|WS_TABSTOP, 6, 65, 204, 84
-  CONTROL "", 550, "Button", WS_TABSTOP, 184, 156, 30, 22
-  CONTROL "Ambito de la invitación", -1, "Button", BS_GROUPBOX, 2, 1, 212, 54
+  CONTROL "", 120, "SysListView32", LVS_SINGLESEL|LVS_SHOWSELALWAYS|WS_BORDER|WS_TABSTOP, 6, 66, 284, 84
+  CONTROL "", 550, "Button", WS_TABSTOP, 262, 189, 30, 22
+  CONTROL "Ambito de la invitación", -1, "Button", BS_GROUPBOX, 2, 1, 291, 54
   CONTROL "Todo", -1, "Static", SS_CENTER|WS_GROUP, 37, 35, 30, 18
   CONTROL "Línea actual", -1, "Static", SS_CENTER|WS_GROUP, 6, 35, 30, 18
-  CONTROL "Motivo de la invitación", -1, "Button", BS_GROUPBOX, 2, 56, 212, 96
+  CONTROL "Motivo de la invitación", -1, "Button", BS_GROUPBOX, 2, 56, 291, 97
+  CONTROL "Edit", 130, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 6, 164, 252, 16
+  CONTROL "Texto de la invitación", -1, "Button", BS_GROUPBOX, 2, 154, 290, 30
+  CONTROL "", 540, "Button", WS_TABSTOP, 227, 189, 30, 22
+  CONTROL "", 131, "Button", 0x00000000, 260, 164, 30, 16
 }
 
 SELECTMESA DIALOG DISCARDABLE 4, 47, 674, 454
