Orden en comandas

--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -1893,11 +1893,11 @@ FONT 12, "Segoe UI"
 }
 
 TPVTACTIL DIALOG DISCARDABLE 4, 47, 676, 423
-STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_THICKFRAME|WS_CAPTION|WS_SYSMENU|WS_MAXIMIZEBOX|WS_VISIBLE
+STYLE DS_MODALFRAME|DS_3DLOOK|WS_THICKFRAME|WS_CAPTION|WS_SYSMENU|WS_MAXIMIZEBOX|WS_VISIBLE
 CAPTION "TPV TACTIL"
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00800000, 1, 76, 214, 224
+  CONTROL "", 100, "TXBrowse", WS_TABSTOP|0x00800000, 1, 76, 214, 185
   CONTROL "TOTAL", 410, "Static", WS_BORDER|WS_GROUP, -242, -25, 112, 23
   CONTROL "NTOTAL", 420, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, -1, 112, 23
   CONTROL "NTOTAL", 430, "Static", SS_RIGHT|WS_BORDER|WS_GROUP, -242, 23, 112, 24
@@ -1940,6 +1940,7 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 124, "Button", WS_TABSTOP, 87, 379, 42, 36
   CONTROL "", 304, "Button", WS_TABSTOP, 420, 379, 42, 36
   CONTROL "", 305, "Button", WS_TABSTOP, 462, 379, 42, 36
+  CONTROL "", 700, "C5ImageView", WS_TABSTOP|0x00800000, 1, 260, 214, 39
 }
 
 TPV_LISTA_TICKET_1280X752 DIALOG DISCARDABLE 4, 47, 548, 255
