Tactil orden comandas

--- a/resource/Gstimage11.rc
+++ b/resource/Gstimage11.rc
@@ -39,6 +39,7 @@ Calendar_Alpha_48 BITMAP "..\\bmp\\Calendar_Alpha_48.bmp"
 Symbol_Questionmark_Alpha_48 BITMAP "..\\bmp\\Symbol_Questionmark_Alpha_48.bmp"
 Preferences_48_Alpha BITMAP "..\\bmp\\Preferences_48_Alpha.bmp"
 Sort_az_descending_alpha_16 BITMAP "..\\bmp\\Sort_az_descending_alpha_16.bmp"
+Sort_az_descending_32 BITMAP "..\\bmp\\Sort_az_descending_32.bmp"
 Form_Blue_Add_Alpha_48 BITMAP "..\\bmp\\Form_Blue_Add_Alpha_48.bmp"
 Document_new_16 BITMAP "..\\bmp\\Document_new_16.bmp"
 Document_new_32 BITMAP "..\\bmp\\Document_new_32.bmp"
