--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -11365,43 +11365,44 @@ EMPRESA_0 DIALOG DISCARDABLE 92, 14, 432, 361
 STYLE WS_CHILD|DS_3DLOOK
 FONT 8, "MS Sans Serif"
 {
-  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 41, 222, 11
+  CONTROL "", 160, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 41, 207, 11
   CONTROL "", 165, "Edit", ES_RIGHT|ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 380, 41, 44, 11
   CONTROL "", 170, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 54, 297, 11
   CONTROL "", 176, "Edit", ES_AUTOHSCROLL|ES_PASSWORD|WS_BORDER|WS_TABSTOP, 127, 67, 96, 11
   CONTROL "Mi servidor de salida (SMTP) requiere autenticación", 175, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 249, 68, 175, 10
   CONTROL "", 180, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 128, 80, 297, 11
-  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 111, 222, 11
+  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 111, 207, 11
   CONTROL "", 110, "Edit", ES_RIGHT|ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 380, 111, 44, 11
   CONTROL "", 120, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 125, 297, 11
   CONTROL "", 130, "Edit", ES_AUTOHSCROLL|ES_PASSWORD|WS_BORDER|WS_TABSTOP, 127, 139, 297, 11
   CONTROL "", 140, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 152, 297, 11
   CONTROL "", 141, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 164, 297, 11
-  CONTROL "", 210, "Edit", ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 127, 178, 52, 11
-  CONTROL "TBtnBmp", 150, "TBtnBmp", 0x00000000, 412, 176, 12, 13
-  CONTROL "", 220, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 127, 192, 52, 15
+  CONTROL "", 142, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 178, 115, 11
+  CONTROL "", 220, "ComboBox", WS_BORDER|CBS_DROPDOWN|WS_VSCROLL|WS_TABSTOP, 127, 193, 52, 15
   CONTROL "Conexion en tiempo real con la web", 400, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 48, 209, 129, 10
-  CONTROL "", 250, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 236, 222, 11
+  CONTROL "", 210, "Edit", ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 381, 178, 43, 11
+  CONTROL "TBtnBmp", 150, "TBtnBmp", 0x00000000, 412, 191, 12, 13
+  CONTROL "", 250, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 236, 207, 11
   CONTROL "", 260, "Edit", ES_RIGHT|ES_NUMBER|ES_AUTOHSCROLL|WS_VSCROLL|WS_BORDER|WS_TABSTOP, 380, 236, 44, 11
-  CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 250, 222, 11
-  CONTROL "Envío pasivo", 270, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 351, 251, 72, 10
-  CONTROL "", 240, "Edit", ES_AUTOHSCROLL|ES_PASSWORD|WS_BORDER|WS_TABSTOP, 127, 265, 222, 11
+  CONTROL "", 230, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 250, 207, 11
+  CONTROL "Envío pasivo", 270, "Button", BS_AUTOCHECKBOX|WS_TABSTOP, 335, 251, 72, 10
+  CONTROL "", 240, "Edit", ES_AUTOHSCROLL|ES_PASSWORD|WS_BORDER|WS_TABSTOP, 127, 265, 207, 11
   CONTROL "", 200, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 279, 297, 11
   CONTROL "", 300, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 306, 297, 11
   CONTROL "", 310, "Edit", ES_AUTOHSCROLL|WS_BORDER|WS_TABSTOP, 127, 319, 96, 11
-  CONTROL "Servidor base de datos de comercio electrónico", -1, "Button", BS_GROUPBOX, 43, 98, 385, 126
+  CONTROL "Servidor base de datos de comercio electrónico", -1, "Button", BS_GROUPBOX, 44, 98, 385, 126
   CONTROL "Servidor", -1, "Static", WS_GROUP, 48, 114, 31, 8
   CONTROL "Usuario", -1, "Static", WS_GROUP, 48, 127, 29, 8
   CONTROL "Contraseña", -1, "Static", WS_GROUP, 48, 141, 41, 8
   CONTROL "Base de datos", -1, "Static", WS_GROUP, 48, 154, 51, 8
-  CONTROL "Puerto", -1, "Static", WS_GROUP, 351, 114, 26, 8
-  CONTROL "Probar conexión", -1, "Static", WS_GROUP, 352, 181, 57, 8
+  CONTROL "Puerto", -1, "Static", WS_GROUP, 335, 114, 26, 8
+  CONTROL "Probar conexión", -1, "Static", WS_GROUP, 335, 196, 57, 8
   CONTROL "Servidor de correo electrónico", -1, "Button", BS_GROUPBOX, 44, 29, 385, 67
   CONTROL "Servidor", -1, "Static", WS_GROUP, 48, 44, 31, 8
   CONTROL "Cuenta", -1, "Static", WS_GROUP, 48, 57, 28, 8
-  CONTROL "Puerto", -1, "Static", WS_GROUP, 351, 43, 26, 8
+  CONTROL "Puerto", -1, "Static", WS_GROUP, 335, 43, 26, 8
   CONTROL "Contraseña", -1, "Static", WS_GROUP, 48, 70, 41, 8
-  CONTROL "Serie pedidos", -1, "Static", WS_GROUP, 48, 181, 65, 8
+  CONTROL "Serie pedidos", -1, "Static", WS_GROUP, 335, 181, 45, 8
   CONTROL "Latencia pedidos", -1, "Static", WS_GROUP, 48, 196, 65, 8
   CONTROL "Intercambio electrónico de datos EDI", -1, "Button", BS_GROUPBOX, 43, 294, 384, 40
   CONTROL "Directorio exportación", -1, "Static", WS_GROUP, 48, 309, 74, 8
@@ -11411,11 +11412,12 @@ FONT 8, "MS Sans Serif"
   CONTROL "Contraseña FTP", -1, "Static", WS_GROUP, 48, 267, 51, 8
   CONTROL "Directorio imágenes", -1, "Static", WS_GROUP, 48, 282, 70, 8
   CONTROL "Servidor", -1, "Static", WS_GROUP, 48, 239, 31, 8
-  CONTROL "Puerto", -1, "Static", WS_GROUP, 351, 239, 26, 8
+  CONTROL "Puerto", -1, "Static", WS_GROUP, 335, 239, 26, 8
   CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30, WS_EX_TRANSPARENT
   CONTROL "Configuraciones para el envio de email y para el enlace de la aplicación con una página web", -1, "Static", SS_LEFTNOWORDWRAP|WS_GROUP, 44, 3, 384, 8
   CONTROL "Cookie key", -1, "Static", WS_GROUP, 48, 167, 51, 8
   CONTROL "Enviar con copia a", -1, "Static", WS_GROUP, 49, 83, 65, 8
+  CONTROL "Prefijo bases de datos", -1, "Static", WS_GROUP, 48, 181, 72, 8
 }
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
@@ -19125,7 +19127,7 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH
 
-OrdenComanda DIALOG DISCARDABLE 60, 16, 297, 73
+ORDENCOMANDA DIALOG DISCARDABLE 60, 16, 297, 73
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Orden de comanda"
 FONT 8, "Helv"
