--- a/resource/Gsttactil.rc
+++ b/resource/Gsttactil.rc
@@ -1102,28 +1102,30 @@ FONT 8, "MS Sans Serif"
   CONTROL "0", 650, "Static", SS_RIGHT|WS_GROUP, 570, 281, 105, 11
 }
 
-LIBRE DIALOG DISCARDABLE 6, 18, 330, 178
+LIBRE DIALOG DISCARDABLE 6, 18, 256, 86
 STYLE WS_POPUP|DS_MODALFRAME|DS_3DLOOK|WS_CAPTION|WS_SYSMENU|WS_VISIBLE
 CAPTION "Artículo libre"
-FONT 12, "Segoe UI"
+FONT 20, "Segoe UI"
 {
-  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 8, 12, 283, 16
-  CONTROL "", 110, "Button", 0x00000000, 294, 12, 30, 16
-  CONTROL "", 120, "Edit", ES_RIGHT|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 150, 41, 141, 16
-  CONTROL "", 130, "Button", 0x00000000, 294, 41, 30, 16
-  CONTROL "", 140, "Edit", ES_RIGHT|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 150, 71, 141, 16
-  CONTROL "", 150, "Button", 0x00000000, 294, 71, 30, 16
-  CONTROL "", 160, "Edit", ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 8, 132, 283, 16
-  CONTROL "", 170, "Button", 0x00000000, 294, 132, 30, 16
-  CONTROL "", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 263, 153, 30, 22
-  CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 296, 153, 30, 22
-  CONTROL "Descripción", -1, "Button", BS_GROUPBOX, 4, 2, 322, 28
-  CONTROL "Unidades", -1, "Button", BS_GROUPBOX, 4, 33, 322, 28
-  CONTROL "Precio", -1, "Button", BS_GROUPBOX, 4, 63, 322, 28
-  CONTROL "Impresora", -1, "Button", BS_GROUPBOX, 4, 122, 322, 28
-  CONTROL "", 200, "Edit", ES_RIGHT|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 150, 101, 141, 16
-  CONTROL "", 210, "Button", 0x00000000, 294, 101, 30, 16
-  CONTROL "Tipo de I.V.A.", -1, "Button", BS_GROUPBOX, 4, 93, 322, 28
+  CONTROL "", 100, "Edit", WS_BORDER|WS_TABSTOP, 57, 3, 180, 10
+  CONTROL "", 120, "Edit", ES_RIGHT|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 137, 14, 100, 10
+  CONTROL "", 140, "Edit", ES_RIGHT|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 137, 25, 100, 10
+  CONTROL "", 200, "Edit", ES_RIGHT|ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 137, 36, 100, 10
+  CONTROL "", 180, "ComboBox", WS_BORDER|CBS_DROPDOWN|CBS_SORT|WS_VSCROLL|WS_TABSTOP, 137, 47, 100, 60
+  CONTROL "", 160, "Edit", ES_AUTOVSCROLL|WS_BORDER|WS_TABSTOP, 57, 58, 180, 10
+  CONTROL "", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 221, 71, 16, 12
+  CONTROL "", IDCANCEL, "Button", WS_TABSTOP, 238, 71, 16, 12
+  CONTROL "", 110, "Button", 0x00000000, 238, 3, 16, 10
+  CONTROL "", 130, "Button", 0x00000000, 238, 14, 16, 10
+  CONTROL "", 150, "Button", 0x00000000, 238, 25, 16, 10
+  CONTROL "", 170, "Button", 0x00000000, 238, 58, 16, 10
+  CONTROL "", 210, "Button", 0x00000000, 238, 36, 16, 10
+  CONTROL "Descripción", -1, "Static", WS_GROUP, 2, 5, 39, 8
+  CONTROL "Unidades", -1, "Static", WS_GROUP, 2, 16, 32, 8
+  CONTROL "Precio", -1, "Static", WS_GROUP, 2, 27, 22, 8
+  CONTROL "Tipo de I.V.A.", -1, "Static", WS_GROUP, 2, 38, 44, 8
+  CONTROL "Orden comanda", -1, "Static", WS_GROUP, 2, 49, 53, 8
+  CONTROL "Impresora", -1, "Static", WS_GROUP, 2, 60, 34, 8
 }
 
 ARQUEO_3_TCT DIALOG DISCARDABLE -47, 69, 350, 200
