Limpieza de recursos

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -16,7 +16,6 @@ FONT 8, "MS Sans Serif"
   CONTROL "", 130, "Edit", ES_PASSWORD|WS_BORDER|WS_TABSTOP, 332, 117, 164, 12
   CONTROL "&Aceptar [F5]", IDOK, "Button", BS_DEFPUSHBUTTON|WS_TABSTOP, 394, 196, 50, 14
   CONTROL "&Cancelar", IDCANCEL, "Button", WS_TABSTOP, 446, 196, 50, 14
-  CONTROL "", 150, "TWebBtn", 0x00000000, 396, 234, 100, 12
   CONTROL "Contraseña", 120, "Static", WS_GROUP, 267, 120, 41, 9, WS_EX_TRANSPARENT
   CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 332, 100, 164, 13
   CONTROL "", 160, "Static", WS_GROUP, 42, 249, 460, 11
@@ -16493,7 +16492,7 @@ FONT 8, "MS Sans Serif"
 
 LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
 
-RECIBOS_4 DIALOG DISCARDABLE 82, 27, 333, 272
+RECIBOSPROVEEDORESBANCOS DIALOG DISCARDABLE 82, 27, 333, 272
 STYLE WS_CHILD|WS_VISIBLE
 FONT 8, "MS Sans Serif"
 {
