Error en entregas a cuenta

--- a/resource/Gstdialog.rc
+++ b/resource/Gstdialog.rc
@@ -19140,3 +19140,28 @@ FONT 8, "Helv"
   CONTROL "Descripción ", -1, "Static", WS_GROUP, 10, 18, 60, 8
 }
 
+LANGUAGE LANG_SPANISH,SUBLANG_SPANISH_MODERN
+
+Recibos_4 DIALOG DISCARDABLE 82, 27, 333, 272
+STYLE WS_CHILD|WS_VISIBLE
+FONT 8, "MS Sans Serif"
+{
+  CONTROL "Entidad bancaria de la empresa", -1, "Button", BS_GROUPBOX, 44, 29, 285, 41
+  CONTROL "Entidad bancaria del cliente", -1, "Button", BS_GROUPBOX, 44, 72, 285, 43
+  CONTROL "", 500, "Static", SS_BITMAP|SS_CENTERIMAGE, 4, 3, 34, 30
+  CONTROL "", 100, "Edit", ES_AUTOHSCROLL|WS_HSCROLL|WS_BORDER|WS_TABSTOP, 89, 42, 232, 11
+  CONTROL "", 110, "Edit", WS_BORDER|WS_TABSTOP, 89, 55, 34, 11
+  CONTROL "", 120, "Edit", WS_BORDER|WS_TABSTOP, 125, 55, 34, 11
+  CONTROL "", 130, "Edit", WS_BORDER|WS_TABSTOP, 161, 55, 20, 11
+  CONTROL "", 140, "Edit", WS_BORDER|WS_TABSTOP, 183, 55, 80, 11
+  CONTROL "Banco", -1, "Static", WS_GROUP, 50, 43, 23, 8
+  CONTROL "Cuenta", -1, "Static", WS_GROUP, 50, 58, 27, 8
+  CONTROL "", 200, "Edit", ES_AUTOHSCROLL|WS_HSCROLL|WS_BORDER|WS_TABSTOP, 89, 85, 232, 11
+  CONTROL "", 210, "Edit", WS_BORDER|WS_TABSTOP, 89, 98, 34, 11
+  CONTROL "", 220, "Edit", WS_BORDER|WS_TABSTOP, 125, 98, 34, 11
+  CONTROL "", 230, "Edit", WS_BORDER|WS_TABSTOP, 161, 98, 20, 11
+  CONTROL "", 240, "Edit", WS_BORDER|WS_TABSTOP, 183, 98, 80, 11
+  CONTROL "Banco", -1, "Static", WS_GROUP, 50, 86, 23, 8
+  CONTROL "Cuenta", -1, "Static", WS_GROUP, 50, 101, 27, 8
+}
+
