--- a/resource/Gstimage12.rc
+++ b/resource/Gstimage12.rc
@@ -54,3 +54,5 @@ businessman_chart_32 BITMAP "..\\bmp\\businessman_chart_32.bmp"
 user1_chart_16 BITMAP "..\\bmp\\user1_chart_16.bmp"
 businessman_chart_16 BITMAP "..\\bmp\\businessman_chart_16.bmp"
 cube_yellow_chart_16 BITMAP "..\\bmp\\cube_yellow_chart_16.bmp"
+text_normal_16 BITMAP "..\\bmp\\text_normal_16.bmp"
+branch_16 BITMAP "..\\bmp\\branch_16.bmp"
